# tcl-dbi

./: .gitignore  DESCRIPTION.txt  Makefile.in  README  README.md  configure  configure.in  dbi.tea  init.tcl  pkgIndex.tcl  temp
doc/man/: dbi.n  interface_dbi.n  interface_dbi_admin.n
doc/xml/: interface_dbi.n.xml
docs/: dbi.html  dbi_firebird.html  dbi_interbase.html  dbi_mysql.html  dbi_odbc.html  dbi_postgresql.html  dbi_sqlite.html  dbi_sqlite3.html  index.html  interface_dbi.html  interface_dbi_admin.html
docs/html/: interface_dbi.html
docs/man/: dbi.n  interface_dbi.n  interface_dbi_admin.n
docs/xml/: dbi.n.xml  interface_dbi.xml  interface_dbi_admin.xml
firebird/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  confdefs.h  configure  configure.in  dbi_firebird.tea  firebird.m4  init.tcl  pkgIndex.tcl
firebird/generic/: firebird.c  firebird.h
interbase/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_interbase.tea  firebird.m4  ibase.m4  init.tcl  interbase.m4  pkgIndex.tcl
interfaces/: dbi.txt  test_dbi.tcl  test_dbi_admin.tcl  test_dbi_blob.tcl  test_dbiadmin.tcl
lib/: TblEditor.tcl  init.tcl  interface_dbi.tcl  interface_dbi_admin.tcl  interfaces.tcl  tbledit.tcl  tclIndex
mysql/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_mysql.tea  init.tcl  mysql.m4  pkgIndex.tcl
odbc/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_odbc.tea  init.tcl  odbc.m4  pkgIndex.tcl
postgresql/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_postgresql.tea  init.tcl  pkgIndex.tcl  postgresql.m4
sqlite/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_sqlite.tea  init.tcl  pkgIndex.tcl  sqlite.m4
sqlite3/: DESCRIPTION.txt  Makefile.in  README  aclocal.m4  configure  configure.in  dbi_sqlite3.tea  init.tcl  pkgIndex.tcl  pkgIndex.tcl.in  sqlite3.m4
src/: Makefile  Makefile.in  configure  configure.in  dbi.c  dbi.h  dbiInit.c  odbc.c  odbc.h  odbc_result.c  postgresql.c  postgresql.h  tclAppInit.c
tests/: all.tcl  dbi.tcl  info.tcl  interbase.tcl  postgresql.tcl  tools.tcl  try.tcl  txn.tcl
work/: inst.sh  inst.tcl
(+93 files in other folders)
